--- a/contact.html
+++ b/contact.html
@@ -4,23 +4,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home - CHARUSAT Portal</title>
-        <link rel="stylesheet" href="css/contact.css">
+        <link rel="stylesheet" href="website.css">
         <title>Home</title>
     </head>
   <body class="body1">
     <!-- Header -->
     <header class="site-header">
-        <div class="image-text-row2">
-            <img class="Image3" src="images.png" alt="CHARUSAT Logo">
-            <span>
-                <h1>CHARUSAT PORTAL</h1>
-            </span>
-        </div>
-    </header>
+  <div class="header-content">
+    <img class="Image3" src="images.png" alt="CHARUSAT Logo">
+    <h1 class="portal-title">CHARUSAT PORTAL</h1>
+  </div>
+</header>
 
     <!-- Navigation Bar -->
     <nav class="navbar">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="profile.html">Profile</a>
         <a href="results.html">Result</a>
         <a href="events.html">Event</a>
