--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                             Data Center @ CHARUSAT - WINCELL                   <br></span>
 
 
-                            <span class="side-text2"><b>Infrastructure & Resources</b><br><br>
+                            <span><b>Infrastructure & Resources</b><br><br>
                             Laboratories<br><br>
                             <b>Newsletter</b><br><br>
                             CHARUSAT Chronicles : The Quill<br><br>
