--- a/results.html
+++ b/results.html
@@ -14,7 +14,7 @@
     <img class="Image3" src="images.png" alt="CHARUSAT Logo">
     <h1 class="portal-title">CHARUSAT PORTAL</h1>
   </div>
-</header>AL-Login</h1></span>
+</header></h1></span>
         </header></div>
         <nav class="navbar">
         <a href="index.html">Home</a>
