--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li style="background-color: bisque; padding: 1rem; ">NAAC A+ Accredited University</li><br><br>
         <li style="background-color: bisque; padding: 1rem;">Ranked among Top 3 Universities in Gujarat by GSIRF</li><br><br>
         <li style="background-color: bisque; padding: 1rem;">Member of United Nations of Academic Impact</li><br><br>
-        <li style="background-color: bisque; padding: 1rem;">Achieved Q2 Innovation Rank in 110th IND SCimgGO Institutions Rankings</li><br><br>
+        <li style="background-color: bisque; padding: 1rem;">Achieved Q2 Innovation Rank in 110th IND SCIMAGO Institutions Rankings</li><br><br>
         <li style="background-color: bisque; padding: 1rem;">Ranked among Top 200 University by NIRF</li></span></div><br></h3></ul>
   
 <br><br><div class="high">HIGHLY CHERISHED BY STUDENT WORLDWIDE</div>
