--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         <a href="profile.html">Profile</a>
         <a href="results.html">Result</a>
         <a href="events.html">Event</a>
-        <a href="contact.html">Contact us</a>
+        <a href="faq.html">FAQ's</a>
     </nav>
 
   
